[package]
name = "ltr303"
version = "0.1.0"
authors = ["Ardelean Călin-Petru <ardelean.calin@outlook.com>"]
repository = "https://github.com/Ardelean-Calin/ltr303-rs"
license = "AGPL-3.0-or-later"
description = ""
readme = "README.md"
keywords = []
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/Ardelean-Calin/ltr303-rs"
documentation = "https://docs.rs/ltr303-rs"
exclude = [".devcontainer", ".vscode"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
paste = "1.0.7"
num-derive = "0.3"

[dependencies.num]
version = "0.4"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
embedded-hal-mock = "0.8.0"

# [build-dependencies]
