[package]
name = "ltr303"
version = "0.1.3"
authors = ["Ardelean Călin-Petru <ardelean.calin@outlook.com>"]
repository = "https://github.com/Ardelean-Calin/ltr303-rs"
license = "Apache-2.0"
description = "Platform agnostic Rust driver for the LTR-303 Ambient Light Sensor."
readme = "README.md"
keywords = ["ambient", "light", "sensor", "embedded-hal-driver", "als"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/Ardelean-Calin/ltr303-rs"
documentation = "https://docs.rs/ltr303"
exclude = [".devcontainer", ".vscode"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0"
paste = "1.0.7"
num-derive = "0.3"

[dependencies.num]
version = "0.4"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
embedded-hal-mock = "0.10.0"
linux-embedded-hal = "0.4.0"

# [build-dependencies]
